--- a/CSS.css
+++ b/CSS.css
@@ -1,3 +1,7 @@
 canvas {/*This will give us a boarder  for the canvas block of code  / graphic interface. Note calling the entire canvas element tag*/
     border:1px solid black;
 }
+
+.hidden{
+    display: none
+}
